Opened 18 years ago
Closed 18 years ago
#993 closed bug (fixed)
page fault with interrupts disabled under vmware
Reported by: | jackburton | Owned by: | marcusoverhagen |
---|---|---|---|
Priority: | critical | Milestone: | R1 |
Component: | Drivers/Network | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I'm getting this problem randomly, since some revisions: Haiku goes to KDL without doing anything in particular. My vmware configuration uses the ipro1000 NIC, the crash seems related to that.
Attachments (6)
Change History (26)
comment:1 by , 18 years ago
Component: | System/Kernel → Drivers/Network |
---|---|
Owner: | changed from | to
comment:2 by , 18 years ago
Status: | new → assigned |
---|
comment:3 by , 18 years ago
comment:4 by , 18 years ago
comment:6 by , 18 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Reopening, still happens in hrev20005.
follow-up: 8 comment:7 by , 18 years ago
Please attach the output of
areas teams
You can setup com1 to go to a file in vmware, and enable serial debug output to capture it.
comment:8 by , 18 years ago
Replying to marcusoverhagen:
You can setup com1 to go to a file in vmware, and enable serial debug output to capture it.
Does that work with vmware player too ? I can't find any info on how to redirect the com port.
follow-up: 10 comment:9 by , 18 years ago
Yes it works, at least with vmware player in Linux.
serial0.present = "true" serial0.fileType = "file" serial0.fileName = "haiku-serial-port.txt" serial0.tryNoRxLoss = "FALSE"
comment:10 by , 18 years ago
Replying to marcusoverhagen:
Now that's interesting. I enabled serial log and the bug isn't showing up anymore.
comment:11 by , 18 years ago
When reporting additional info, please make sure to include the initally printed KDL information, as the driver has been modified since your initial report.
comment:12 by , 18 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
I'll close this bug as it no longer applies. I've tried to reproduce it again with newer revisions, but failed.
comment:13 by , 18 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Happens again with latest revision (in VMWare). If I enable syslog I can't reproduce.
comment:14 by , 18 years ago
Actually I'm starting to think it's not related to the ipro1000 driver, since I just reproduced a similar KDL while launching the page setup for the PDF printer driver.
by , 18 years ago
Attachment: | page_fault.png added |
---|
similar kdl with vmware under linux with vlance driver
comment:16 by , 18 years ago
I was finally able to reproduce it with serial log enabled. It shows up when I mess with ifconfig with the ipro1000 card (trying to set the ip address).
by , 18 years ago
Attachment: | serial.txt added |
---|
The complete serial log, with backtrace, areas and teams output
comment:17 by , 18 years ago
A side note: I'm having those crashes when connected to a network with many other computers. The large number of "ARP host 1a16a8c0 updated with different hardware address 00:02:a5:93:19:b5." messages could suggest some problems in the net stack itself ?
follow-up: 19 comment:18 by , 18 years ago
Does this bug still happen? I can't reproduce it using vmware. I also transefered gigabytes using this driver in BeOS, so I doubt that it's a problem with the driver.
comment:19 by , 18 years ago
Replying to marcusoverhagen:
Does this bug still happen? I can't reproduce it using vmware.
I will retest it soon.
I also transefered gigabytes using this driver in BeOS, so I doubt that it's a problem with the driver.
Yes, I have too the feeling it's not a driver problem. Probably it's a kernel/netstack problem which is triggered when the pc is connected to a network with many hosts. In fact, I was also able to reproduce it once with the "other" vmware NIC driver. I will retest it soon, now that the netstack has been changed a lot.
comment:20 by , 18 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
It's gone. Was probably a bug in the network stack.
Please attach the vmx file. Might be related to the available memory size.
Do you have any errors like "ipro1000: ERROR get_memory_map failed for 0x8061e802" in syslog or serial debug output before this crash?