When getting the memory map, ask only for 2046 bytes instead of 2048 bytes. This should fix bugs #993 and #997. On BeOS R5 asking for 2 bytes too much wasn't a problem, as we only need the first page_entry, and it didn't return any Error.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@19992 a95241bf-73f2-0310-859d-f6bbb57e9c96